# Redis-4.x-Cookbook

./: README.md
Chapter01/echodemo/: CMakeLists.txt
Chapter01/echodemo/echodemo/: echo-client.c  echo-server.c  echo.c  echo.h
Chapter01/echodemo/src/: release.h
Chapter03/: datapipe.txt  pipeline.txt  updatejson.lua  updatejsondebug.lua
Chapter04/java/redis-cookbook/: build.gradle  settings.gradle
Chapter04/java/redis-cookbook/src/main/java/com/packtpub/redis_cookbook/: JedisLuaDemo.java  JedisPipelineDemo.java  JedisPoolDemo.java  JedisSingleDemo.java  JedisTransactionDemo.java
Chapter04/java/redis-cookbook/src/main/resources/: updateJson.lua
Chapter04/mapreduce-redis-demo/: pom.xml  preparedata_mr.sh
Chapter04/mapreduce-redis-demo/src/main/java/packt/rediscookbook/mapreduce/: Application.java
Chapter04/mapreduce-redis-demo/src/main/java/packt/rediscookbook/mapreduce/bean/: User.java
Chapter04/mapreduce-redis-demo/src/main/java/packt/rediscookbook/mapreduce/input/: RedisHashInputFormat.java  RedisHashInputSplit.java  RedisHashRecordReader.java
Chapter04/mapreduce-redis-demo/src/main/java/packt/rediscookbook/mapreduce/output/: RedisHashOutputFormat.java  RedisHashRecordWriter.java  RedisOutputMapper.java
Chapter04/python/: RedisDemo.py  RedisLuaDemo.py  RedisPipelineDemo.py  updateJson.lua
Chapter04/spark-redis-demo/: pom.xml
Chapter04/spark-redis-demo/src/main/scala/: SumBalance.scala
Chapter04/spring-data-redis-demo/: pom.xml
Chapter04/spring-data-redis-demo/src/main/java/packt/rediscookbook/springdataredisdemo/: SpringDataRedisDemoApplication.java  Swagger2.java
Chapter04/spring-data-redis-demo/src/main/java/packt/rediscookbook/springdataredisdemo/config/: AppConfig.java
Chapter04/spring-data-redis-demo/src/main/java/packt/rediscookbook/springdataredisdemo/controller/: UserController.java
Chapter04/spring-data-redis-demo/src/main/java/packt/rediscookbook/springdataredisdemo/model/: User.java
Chapter04/spring-data-redis-demo/src/main/java/packt/rediscookbook/springdataredisdemo/services/: UserService.java  UserServiceImpl.java
Chapter04/spring-data-redis-demo/src/main/resources/: application.properties
Chapter04/spring-data-redis-demo/src/test/java/packt/rediscookbook/springdataredisdemo/: SpringDataRedisDemoApplicationTests.java
Chapter04/usingcorrectAPIs/: hmset-vs-hset.sh  hscan.sh
Chapter04/usingcorrectdatetypes/: populatedata0.sh  populatedata1.sh  populatedata2.sh  populatedata3.sh  populatedata4.sh  populatedata5.sh  setjsonashashmsgpack.lua  setjsonasmsgpack.lua
Chapter05/: preparerepldata.sh
Chapter07/: rdb_control.bash  sentinel_events_notify.py
Chapter09/: populatedata6.sh
Chapter10/: scanbigkeys.sh
Chapter11/: mymodule.c
